<resources>
    <string name="app_name">CBR</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="daftar">Daftar</string>
    <string name="forgot_password">FORGOT PASSWORD ?</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
